# old_bkmks

./: .gitignore  README.md  pyproject.toml  setup.cfg
bkmk/: add.py  clean.py  delete.py  diagnostics.py  main.py  notes.py  question_template.py  search.py  see.py  update.py
bkmk/cli_version/: add_cli.py  all.py  delete.py  search.py  update.py
bkmk/configs/: config.py
bkmk/db_cleaning/: tasks.py
