[metadata]
name = bkmks_mclds
version = 0.4
author = mclds
author_email = mclds@protonmail.com
description = Bookmark manager.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[flake8]
extend-ignore = F401 F841 W605 E704, E722, E1, W1, E2, W2, E3, W3, E4, W4, E5, W5, E731
max-line-length = 180
verbose = 2
show-source = True

[options.entry_points]
console_scripts =
    bkadd = bkmk.cli_version.add_cli:add
    bkdlt = bkmk.cli_version.delete:delete
    bkupdt = bkmk.cli_version.update:update
    bksrch = bkmk.cli_version.search:db_call
    bkall = bkmk.cli_version.all:all


